force-app/main/default/objects/HelpableSignature__c/HelpableSignature__c.object-meta.xml
<CustomObject>
    <description>Definitions of web page furniture that can be Help Enabled</description>
    <label>Helpable Signature</label>
    <nameField>
        <label>Signature</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Helpable Signatures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>