force-app/main/default/objects/HelpableSignature__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Please provide a brief description of the purpose of this Signature - where it is used etc.</description>
    <inlineHelpText>Please provide a brief description of the purpose of this Signature - where it is used etc.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>