force-app/main/default/objects/HelpableSignature__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>The web domain within which this Signature is applicable</description>
    <inlineHelpText>The web domain within which this Signature is applicable</inlineHelpText>
    <label>Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>