force-app/main/default/objects/HelpableSignature__c/fields/HelpStyle__c.field-meta.xml
<CustomField>
    <fullName>HelpStyle__c</fullName>
    <description>Improved Help styling class name defining one of several known ways in which Help callouts can be displayed</description>
    <inlineHelpText>Improved Help styling class name defining one of several known ways in which Help callouts can be displayed</inlineHelpText>
    <label>Help Style</label>
    <length>50</length>
    <type>Text</type>
</CustomField>