force-app/main/default/objects/HelpableSignature__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <defaultValue>&quot;id&quot;</defaultValue>
    <description>The attribute or property to use as the unique identifier for a given instance of a signature element</description>
    <inlineHelpText>The attribute or property to use as the unique identifier for a given instance of a signature element</inlineHelpText>
    <label>Identifier</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>