force-app/main/default/objects/HelpableSignature__c/fields/IdentifierType__c.field-meta.xml
<CustomField>
    <fullName>IdentifierType__c</fullName>
    <description>Defines the Type of the unique identifier for a given instance of a signature element</description>
    <inlineHelpText>Defines the Type of the unique identifier for a given instance of a signature element</inlineHelpText>
    <label>Identifier Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attribute</fullName>
                <default>true</default>
                <label>Attribute</label>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Html</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>