force-app/main/default/objects/HelpableSignature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Identifier__c</columns>
    <columns>IdentifierType__c</columns>
    <columns>Domain__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>